{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 17,
  "lineage": "5bbe0f30-3d95-8df2-aab6-513167aef1b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_env_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c272455b0778ebeb",
            "arn": "arn:aws:ec2:us-west-2:533267316558:instance/i-0ee7bf89d0a885872",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee7bf89d0a885872",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m1.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f5c3c4386f07dba",
            "private_dns": "ip-10-0-53-113.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.53.113",
            "public_dns": "ec2-52-40-100-228.us-west-2.compute.amazonaws.com",
            "public_ip": "52.40.100.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1910c6bf6ddfd08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-026f54ec13c7f4117"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d833b7f88208c1a",
            "tags": {
              "Name": "main_server"
            },
            "tags_all": {
              "Name": "main_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026f54ec13c7f4117"
            ]
          },
          "dependencies": [
            "aws_security_group.security",
            "aws_subnet.subnet",
            "aws_vpc.test_env",
            "data.aws_ami.ubuntu_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c272455b0778ebeb",
            "arn": "arn:aws:ec2:us-west-2:533267316558:instance/i-0bd2e198165d43b0a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd2e198165d43b0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m1.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0848e9f718505872f",
            "private_dns": "ip-10-0-43-37.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.43.37",
            "public_dns": "ec2-18-246-59-81.us-west-2.compute.amazonaws.com",
            "public_ip": "18.246.59.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd91dd3434db1d34",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-026f54ec13c7f4117"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01d833b7f88208c1a",
            "tags": {
              "Name": "test_server"
            },
            "tags_all": {
              "Name": "test_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026f54ec13c7f4117"
            ]
          },
          "dependencies": [
            "aws_security_group.security",
            "aws_subnet.subnet",
            "aws_vpc.test_env",
            "data.aws_ami.ubuntu_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_env_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267316558:internet-gateway/igw-0e34a4764d9b4a29b",
            "id": "igw-0e34a4764d9b4a29b",
            "owner_id": "533267316558",
            "vpc_id": "vpc-0259240c2f9654612"
          },
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_test_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267316558:route-table/rtb-0e1c0def9e13d945c",
            "id": "rtb-0e1c0def9e13d945c",
            "owner_id": "533267316558",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e34a4764d9b4a29b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0259240c2f9654612"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_env_gw",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0359b12a4eb0a77",
            "route_table_id": "rtb-0e1c0def9e13d945c",
            "subnet_id": "subnet-01d833b7f88208c1a"
          },
          "dependencies": [
            "aws_internet_gateway.test_env_gw",
            "aws_route_table.route_table_test_env",
            "aws_subnet.subnet",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267316558:security-group/sg-026f54ec13c7f4117",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026f54ec13c7f4117",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all",
            "name_prefix": "",
            "owner_id": "533267316558",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0259240c2f9654612"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267316558:subnet/subnet-01d833b7f88208c1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d833b7f88208c1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267316558",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0259240c2f9654612"
          },
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267316558:vpc/vpc-0259240c2f9654612",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09958fa0d8eb5a593",
            "default_route_table_id": "rtb-0af4ef1c3d2ad9cc5",
            "default_security_group_id": "sg-0b3156a3000e0e19f",
            "dhcp_options_id": "dopt-023d67c28de89efc6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0259240c2f9654612",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af4ef1c3d2ad9cc5",
            "owner_id": "533267316558",
            "tags": {
              "Name": "test_env"
            },
            "tags_all": {
              "Name": "test_env"
            }
          }
        }
      ]
    }
  ]
}